src/main/metadata-au/objects/Complaint_Description__c.object
<CustomObject>
    <description>Description: Description of Case handling process. especially for Complaint</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Descrptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Descrptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Complaint Description / Resolution</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Complaint Description / Resolution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Descriptions / Resolutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>